--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -3,128 +3,228 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor Portal | Peer-2-Peer</title>
-    <link rel="stylesheet" href="tutor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src='https://meet.jit.si/external_api.js'></script>
     <style>
-        /* Sidebar Layout Fixes */
+        :root {
+            --primary: #000033;
+            --accent: #32cd32;
+            --bg: #f4f7f9;
+            --white: #ffffff;
+        }
+
         body {
-            display: flex;
-            min-height: 100vh;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            background: #f4f7f9;
+            background: var(--bg);
+            color: #333;
         }
 
-        .sidebar {
-            width: 250px;
-            background: #000033;
+        /* Top Navbar */
+        .navbar {
+            background: var(--primary);
             color: white;
+            padding: 15px 30px;
             display: flex;
-            flex-direction: column;
-            position: fixed;
-            height: 100vh;
-            padding: 20px 0;
-            z-index: 100;
-        }
-
-        .sidebar-header {
-            padding: 0 20px 30px;
-            font-weight: bold;
-            font-size: 1.2rem;
-            color: #32cd32;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            margin-bottom: 20px;
-        }
-
-        .nav-links {
-            list-style: none;
-            padding: 0;
-            flex-grow: 1;
-        }
-
-        .nav-item {
-            padding: 15px 25px;
-            display: flex;
+            justify-content: space-between;
             align-items: center;
-            gap: 12px;
-            color: #7fdff0;
-            text-decoration: none;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: var(--accent);
+        }
+
+        .nav-links button {
+            background: transparent;
+            border: 1px solid var(--accent);
+            color: var(--accent);
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
             transition: 0.3s;
         }
 
-        .nav-item:hover,
-        .nav-item.active {
-            background: rgba(255, 255, 255, 0.1);
-            color: white;
-            border-left: 4px solid #32cd32;
+        .nav-links button:hover {
+            background: var(--accent);
+            color: var(--primary);
         }
 
-        .main-panel {
-            margin-left: 250px;
-            /* Space for sidebar */
-            flex: 1;
+        /* Welcome Header */
+        .welcome-section {
+            background: white;
+            padding: 40px 30px;
+            text-align: center;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .welcome-section h1 {
+            margin: 0;
+            color: var(--primary);
+        }
+
+        .welcome-section p {
+            color: #666;
+            font-size: 1.1rem;
+        }
+
+        /* Grand Dashboard Buttons */
+        .dashboard-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
             padding: 40px;
-            max-width: calc(100% - 250px);
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
-        .logout-link {
-            padding: 15px 25px;
-            color: #ff4757;
-            text-decoration: none;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        .dash-card {
+            background: var(--white);
+            padding: 40px 20px;
+            border-radius: 15px;
+            text-align: center;
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            border: 1px solid #eee;
         }
 
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 70px;
-            }
+        .dash-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
+        }
 
-            .sidebar span {
-                display: none;
-            }
+        .dash-card i {
+            font-size: 3rem;
+            color: var(--primary);
+            margin-bottom: 20px;
+        }
 
-            .main-panel {
-                margin-left: 70px;
-                max-width: calc(100% - 70px);
-            }
+        .dash-card h3 {
+            margin: 10px 0;
+            color: var(--primary);
+        }
+
+        .dash-card p {
+            font-size: 0.9rem;
+            color: #777;
+        }
+
+        /* Section Container */
+        .portal-section {
+            display: none;
+            padding: 30px;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .active {
+            display: block;
+        }
+
+        /* Forms & Inputs */
+        .organizer-form {
+            background: white;
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .input-row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            margin-bottom: 15px;
+        }
+
+        input,
+        select,
+        textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-sizing: border-box;
+        }
+
+        .btn-action {
+            background: var(--accent);
+            color: var(--primary);
+            border: none;
+            padding: 12px 25px;
+            border-radius: 8px;
+            font-weight: bold;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        /* Video Area */
+        #video-area {
+            display: none;
+            background: #000;
+            border-radius: 12px;
+            margin-top: 20px;
+            min-height: 600px;
         }
     </style>
 </head>
 
 <body>
 
-    <nav class="sidebar">
-        <div class="sidebar-header">
-            P2P <span style="color:white">TUTOR</span>
-        </div>
+    <nav class="navbar">
+        <div class="logo">PEER-2-PEER</div>
         <div class="nav-links">
-            <a href="#" class="nav-item active"><i class="fas fa-th-large"></i> <span>Dashboard</span></a>
-            <a href="#" class="nav-item"><i class="fas fa-video"></i> <span>Live Classes</span></a>
-            <a href="#" class="nav-item"><i class="fas fa-folder-open"></i> <span>Resources</span></a>
-            <a href="#" class="nav-item"><i class="fas fa-users"></i> <span>Students</span></a>
+            <span id="tutorNameDisplay" style="margin-right: 20px; font-weight: 500;">Tutor Name</span>
+            <button onclick="logout()">Logout</button>
         </div>
-        <a href="#" class="logout-link" onclick="logout()"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a>
     </nav>
 
-    <main class="main-panel">
-        <header class="panel-header" style="margin-bottom: 30px;">
-            <h1>Welcome, <span id="tutorNameDisplay">Tutor</span></h1>
-            <p>Manage your upcoming lessons and student engagement.</p>
-        </header>
+    <header class="welcome-section">
+        <h1>Tutor Hub</h1>
+        <p>Manage your classes, resources, and community engagement from one place.</p>
+    </header>
 
-        <section class="management-card" id="live-setup-section">
-            <div class="section-header">
-                <h3><i class="fas fa-calendar-plus"></i> Schedule New Live Class</h3>
-            </div>
-            <div class="input-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 15px;">
-                <div class="input-group">
-                    <label>Class Topic</label>
-                    <input type="text" id="classTopic" placeholder="e.g. Algebra Basics">
-                </div>
-                <div class="input-group">
-                    <label>Target Grade</label>
-                    <select id="classGrade" style="width: 100%; padding: 10px; border-radius: 8px;">
+    <div class="dashboard-grid" id="mainDashboard">
+        <div class="dash-card" onclick="showSection('liveOrganizer')">
+            <i class="fas fa-video"></i>
+            <h3>Live Class Organiser</h3>
+            <p>Schedule and launch Jitsi lessons</p>
+        </div>
+        <div class="dash-card" onclick="showSection('resourceSharing')">
+            <i class="fas fa-file-export"></i>
+            <h3>Resource Sharing</h3>
+            <p>Upload notes and study guides</p>
+        </div>
+        <div class="dash-card" onclick="showSection('tutorDashboard')">
+            <i class="fas fa-chart-line"></i>
+            <h3>Tutor Dashboard</h3>
+            <p>Track student progress and hours</p>
+        </div>
+        <div class="dash-card" onclick="showSection('p2pForum')">
+            <i class="fas fa-comments"></i>
+            <h3>P2P Forum</h3>
+            <p>Engage in community discussions</p>
+        </div>
+    </div>
+
+    <section id="liveOrganizer" class="portal-section">
+        <button onclick="backToDash()"
+            style="margin-bottom: 20px; border: none; background: none; color: var(--primary); cursor: pointer;"><i
+                class="fas fa-arrow-left"></i> Back to Dashboard</button>
+
+        <div id="live-setup-section">
+            <div class="organizer-form">
+                <h3>Schedule New Lesson</h3>
+                <div class="input-row">
+                    <input type="text" id="classTopic" placeholder="Lesson Topic (e.g. Algebra Basics)">
+                    <select id="classGrade">
                         <option value="Grade 8">Grade 8</option>
                         <option value="Grade 9">Grade 9</option>
                         <option value="Grade 10">Grade 10</option>
@@ -132,30 +232,49 @@
                         <option value="Grade 12">Grade 12</option>
                     </select>
                 </div>
+                <textarea id="classDesc" placeholder="Describe the lesson objectives..."
+                    style="height: 100px; margin-bottom: 15px;"></textarea>
+                <button class="btn-action" onclick="scheduleClass()">Save & Schedule</button>
             </div>
-            <div class="input-group" style="margin-top: 15px;">
-                <label>Lesson Description</label>
-                <textarea id="classDesc" style="width: 100%; padding: 10px; border-radius: 8px; min-height: 80px;"
-                    placeholder="Describe what learners will achieve..."></textarea>
-            </div>
-            <button class="btn-deploy" onclick="scheduleClass()" style="margin-top: 15px;">
-                <i class="fas fa-save"></i> Save & Schedule
-            </button>
-        </section>
 
-        <section id="video-area"
-            style="display: none; background: #000; border-radius: 12px; margin-top: 20px; min-height: 600px;">
-        </section>
+            <h3 style="margin-top: 40px;">My Scheduled Classes</h3>
+            <div id="myMeetingsList">
+            </div>
+        </div>
 
-        <section class="management-card" style="margin-top: 30px;">
-            <div class="section-header">
-                <h3><i class="fas fa-list"></i> My Scheduled Classes</h3>
-            </div>
-            <div id="myMeetingsList" style="margin-top: 15px;">
-                <div class="loading-state">Syncing with server...</div>
-            </div>
-        </section>
-    </main>
+        <div id="video-area"></div>
+    </section>
+
+    <section id="resourceSharing" class="portal-section">
+        <button onclick="backToDash()">Back</button>
+        <h2>Resource Sharing</h2>
+        <p>Upload Document for ytour learners or your own notes you created.</p>
+    </section>
+
+    <section id="tutorDashboard" class="portal-section">
+        <button onclick="backToDash()">Back</button>
+        <h2>Tutor Performance</h2>
+        <p>Analytics and Performance Tracking</p>
+    </section>
+
+    <section id="p2pForum" class="portal-section">
+        <button onclick="backToDash()">Back</button>
+        <h2>Peer-2-Peer Community Forum</h2>
+        <p>Ask questions, share ideas, and help each other grow.</p>
+    </section>
+    <section id="WhiteBoard" class="portal-section">
+        <button onclick="backToDash()">Back</button>
+        <h2>White Board</h2>
+        <p>Use our white board to make notes and draw diagrams for your lessons
+        </p>
+    </section>
+    <section id="WhiteBoard" class="portal-section">
+        <button onclick="backToDash()">Back</button>
+        <h2>Create your own document </h2>
+        <p>Make notes , homeworks under your own name.
+        </p>
+    </section>
+
 
     <script src="tutor.js"></script>
 </body>
