--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -4,266 +4,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peer-2-Peer PRO | Tutor Portal</title>
+    <title>Tutor Portal | Peer-2-Peer Pro</title>
+
     <link rel="stylesheet" href="tutor.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/graduation-cap.png">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <script src='https://meet.jit.si/external_api.js'></script>
 </head>
 
 <body>
-    <!-- SIMPLE NAVBAR -->
+
     <nav class="glass-nav">
         <div class="logo-container">
-            <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="Favicon" class="favicon-img">
-            <span>PEER-2-PEER <span style="color: var(--green);">PRO</span></span>
+            <img src="https://img.icons8.com/color/48/000000/graduation-cap.png" alt="P2P Logo" class="favicon-img"
+                style="width: 35px; height: 35px;">
+            <span class="brand-name">PEER-2-PEER <span style="color: var(--green);">PRO</span></span>
         </div>
 
         <div class="nav-right" style="display: flex; align-items: center; gap: 20px;">
             <div class="user-pill"
-                style="display:flex; align-items:center; gap:10px; background:var(--bg); padding:5px 15px; border-radius:30px;">
-                <i class="fas fa-user-circle" style="color:var(--green)"></i>
-                <span id="tutorNameDisplay" style="font-weight:600">Tutor Name</span>
+                style="display:flex; align-items:center; gap:10px; background: rgba(0,0,51,0.05); padding: 8px 18px; border-radius: 30px; border: 1px solid var(--green);">
+                <i class="fas fa-chalkboard-teacher" style="color: var(--navy);"></i>
+                <span id="tutorNameDisplay" style="font-weight: 700; color: var(--navy);">Teacher Name</span>
             </div>
-            <button onclick="logout()"
-                style="background:none; border:none; color:#ff4d4d; cursor:pointer; font-weight:bold;">
-                <i class="fas fa-power-off"></i> Logout
+
+            <button class="logout-minimal" onclick="logout()"
+                style="background:none; border:none; color:#ff4d4d; cursor:pointer; font-size: 1.2rem; transition: 0.3s;">
+                <i class="fas fa-power-off"></i>
             </button>
         </div>
     </nav>
 
-    <!-- SIMPLE HEADER -->
-    <header class="main-header">
-        <h1 class="main-title">Tutor Control Panel</h1>
-        <p class="subtitle">Essential tools for teaching and managing your classes</p>
-    </header>
+    <main class="main-panel">
+        <div id="mainDashboard">
+            <header class="panel-header">
+                <h1>Welcome Back, <span id="welcomeName" style="color: var(--green);">Teacher</span></h1>
+                <p>Manage your live classes and educational resources with the Peer-2-Peer Pro suite.</p>
+            </header>
 
-    <!-- 5 ESSENTIAL ACTION BLOCKS -->
-    <div class="action-container">
-        <div class="action-grid">
-            <!-- Block 1: Organize Class -->
-            <div class="action-card">
-                <div class="card-header">
-                    <div class="action-icon" style="background: linear-gradient(135deg, #1e5799, #207cca);">
-                        <i class="fas fa-calendar-plus"></i>
+            <div class="dashboard-grid">
+                <div class="dash-card card-featured" onclick="showSection('liveOrganizer')">
+                    <div class="card-icon"><i class="fas fa-video"></i></div>
+                    <div class="card-content">
+                        <h3>Live Class Organiser</h3>
+                        <p>Schedule new Jitsi sessions and manage your upcoming live classes.</p>
                     </div>
-                    <h3 class="action-title">Organize Class</h3>
-                    <div class="action-role">Schedule & Management</div>
                 </div>
-                <div class="card-body">
-                    <p class="action-description">Create and manage your class schedules. Set dates, times, and topics
-                        for upcoming sessions. Organize students and track attendance.</p>
-                    <ul class="feature-list">
-                        <li><i class="fas fa-check-circle"></i> Schedule multiple classes</li>
-                        <li><i class="fas fa-check-circle"></i> Set recurring sessions</li>
-                        <li><i class="fas fa-check-circle"></i> Track student attendance</li>
-                        <li><i class="fas fa-check-circle"></i> Send reminders</li>
-                    </ul>
-                </div>
-                <div class="card-footer">
-                    <button class="action-btn" onclick="organizeClass()">
-                        <i class="fas fa-plus-circle"></i> Organize Class
-                    </button>
-                </div>
-            </div>
 
-            <!-- Block 2: Create Document -->
-            <div class="action-card">
-                <div class="card-header">
-                    <div class="action-icon" style="background: linear-gradient(135deg, #834d9b, #d04ed6);">
-                        <i class="fas fa-file-alt"></i>
-                    </div>
-                    <h3 class="action-title">Create Document</h3>
-                    <div class="action-role">Content Creation</div>
+                <div class="dash-card" onclick="showSection('resourceSharing')">
+                    <div class="card-icon"><i class="fas fa-file-export"></i></div>
+                    <h3>Resources</h3>
+                    <p>Upload and share study materials.</p>
                 </div>
-                <div class="card-body">
-                    <p class="action-description">Create lesson plans, worksheets, and study materials. Use templates or
-                        start from scratch to build engaging educational content.</p>
-                    <div class="template-count">
-                        <i class="fas fa-layer-group"></i>
-                        <span>15+ professional templates</span>
-                    </div>
-                    <ul class="feature-list">
-                        <li><i class="fas fa-check-circle"></i> Lesson plan templates</li>
-                        <li><i class="fas fa-check-circle"></i> Worksheet creator</li>
-                        <li><i class="fas fa-check-circle"></i> Study guide builder</li>
-                    </ul>
-                </div>
-                <div class="card-footer">
-                    <button class="action-btn" onclick="createDocument()">
-                        <i class="fas fa-edit"></i> Create Document
-                    </button>
-                </div>
-            </div>
 
-            <!-- Block 3: Upload Document -->
-            <div class="action-card">
-                <div class="card-header">
-                    <div class="action-icon" style="background: linear-gradient(135deg, #11998e, #38ef7d);">
-                        <i class="fas fa-cloud-upload-alt"></i>
-                    </div>
-                    <h3 class="action-title">Upload Document</h3>
-                    <div class="action-role">Resource Sharing</div>
+                <div class="dash-card" onclick="showSection('tutorDashboard')">
+                    <div class="card-icon"><i class="fas fa-chart-line"></i></div>
+                    <h3>Analytics</h3>
+                    <p>Track student engagement.</p>
                 </div>
-                <div class="card-body">
-                    <p class="action-description">Upload existing materials to share with students. Supports PDFs,
-                        presentations, videos, and other educational resources.</p>
-                    <div class="upload-preview">
-                        <i class="fas fa-file-pdf" title="PDF"></i>
-                        <i class="fas fa-file-powerpoint" title="Presentation"></i>
-                        <i class="fas fa-file-word" title="Document"></i>
-                        <i class="fas fa-file-video" title="Video"></i>
-                        <i class="fas fa-file-image" title="Image"></i>
-                    </div>
-                    <ul class="feature-list">
-                        <li><i class="fas fa-check-circle"></i> Up to 100MB per file</li>
-                        <li><i class="fas fa-check-circle"></i> Organize by class</li>
-                        <li><i class="fas fa-check-circle"></i> Set access permissions</li>
-                    </ul>
-                </div>
-                <div class="card-footer">
-                    <button class="action-btn" onclick="uploadDocument()">
-                        <i class="fas fa-upload"></i> Upload Document
-                    </button>
-                </div>
-            </div>
 
-            <!-- Block 4: Whiteboard -->
-            <div class="action-card">
-                <div class="card-header">
-                    <div class="action-icon" style="background: linear-gradient(135deg, #4b6cb7, #182848);">
-                        <i class="fas fa-chalkboard"></i>
-                    </div>
-                    <h3 class="action-title">Interactive Whiteboard</h3>
-                    <div class="action-role">Visual Teaching</div>
+                <div class="dash-card" onclick="showSection('p2pForum')">
+                    <div class="card-icon"><i class="fas fa-comments"></i></div>
+                    <h3>P2P Forum</h3>
+                    <p>Community discussions.</p>
                 </div>
-                <div class="card-body">
-                    <p class="action-description">Draw, write, and explain concepts in real-time. Perfect for math
-                        equations, diagrams, and collaborative problem-solving.</p>
-                    <ul class="feature-list">
-                        <li><i class="fas fa-check-circle"></i> Real-time collaboration</li>
-                        <li><i class="fas fa-check-circle"></i> Math equation support</li>
-                        <li><i class="fas fa-check-circle"></i> Multiple drawing tools</li>
-                        <li><i class="fas fa-check-circle"></i> Save and export boards</li>
-                    </ul>
-                </div>
-                <div class="card-footer">
-                    <button class="action-btn" onclick="openWhiteboard()">
-                        <i class="fas fa-external-link-alt"></i> Open Whiteboard
-                    </button>
-                </div>
-            </div>
 
-            <!-- Block 5: Live Class -->
-            <div class="action-card">
-                <div class="card-header">
-                    <div class="action-icon pulse" style="background: linear-gradient(135deg, #ff416c, #ff4b2b);">
-                        <i class="fas fa-broadcast-tower"></i>
+                <div class="dash-card card-wide" onclick="alert('Whiteboard Feature coming soon!')">
+                    <div class="card-icon"><i class="fas fa-chalkboard"></i></div>
+                    <div class="card-content">
+                        <h3>Interactive Whiteboard</h3>
+                        <p>Visual teaching tools for complex problem solving.</p>
                     </div>
-                    <h3 class="action-title">Live Class</h3>
-                    <div class="action-role">Real-time Teaching</div>
-                </div>
-                <div class="card-body">
-                    <p class="action-description">Start a live teaching session with video, audio, and screen sharing.
-                        Engage with students in real-time and answer questions instantly.</p>
-                    <div class="live-indicator">
-                        <div class="pulse-dot"></div>
-                        <span>Ready to start live session</span>
-                    </div>
-                    <ul class="feature-list">
-                        <li><i class="fas fa-check-circle"></i> Video & audio streaming</li>
-                        <li><i class="fas fa-check-circle"></i> Screen sharing</li>
-                        <li><i class="fas fa-check-circle"></i> Student Q&A</li>
-                        <li><i class="fas fa-check-circle"></i> Session recording</li>
-                    </ul>
-                </div>
-                <div class="card-footer">
-                    <button class="action-btn live-btn" onclick="startLiveClass()">
-                        <i class="fas fa-play-circle"></i> Start Live Class
-                    </button>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- SIMPLE FOOTER -->
-    <footer class="footer">
-        <p>© 2023 Peer-2-Peer Pro Tutoring. All rights reserved.</p>
-        <p>Essential tools for modern educators | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
-    </footer>
+        <section id="liveOrganizer" class="portal-section" style="display: none;">
+            <div style="margin-bottom: 20px;">
+                <button onclick="backToDash()" class="btn-deploy" style="background: var(--navy); color: white;">
+                    <i class="fas fa-arrow-left"></i> Back to Hub
+                </button>
+            </div>
 
-    <script>
-        // Simple tutor portal functions
-        function loadUserInfo() {
-            const userName = sessionStorage.getItem('p2p_name') || 'Tutor';
-            const userAvatar = document.getElementById('userAvatar');
-            const userNameSpan = document.getElementById('userName');
+            <div id="live-setup-section" class="glass-form-container">
+                <h2>Schedule a <span style="color: var(--green);">Live Class</span></h2>
+                <div class="form-grid"
+                    style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px;">
+                    <div class="form-group">
+                        <label>Class Topic</label>
+                        <input type="text" id="classTopic" placeholder="e.g. Mathematics: Trigonometry">
+                    </div>
+                    <div class="form-group">
+                        <label>Grade Level</label>
+                        <select id="classGrade">
+                            <option>Grade 8</option>
+                            <option>Grade 9</option>
+                            <option>Grade 10</option>
+                            <option>Grade 11</option>
+                            <option>Grade 12</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group" style="margin-top: 20px;">
+                    <label>Description</label>
+                    <textarea id="classDesc" style="height: 100px;"
+                        placeholder="Outline the lesson objectives..."></textarea>
+                </div>
+                <button class="btn-deploy" onclick="scheduleClass()" style="margin-top: 20px;">
+                    <i class="fas fa-plus-circle"></i> Create Session
+                </button>
 
-            userNameSpan.textContent = userName;
-            userAvatar.textContent = userName.charAt(0).toUpperCase();
+                <hr style="margin: 40px 0; border: 0; border-top: 1px solid var(--border);">
 
-            // Add random color for avatar
-            const colors = ['#32cd32', '#4a6bff', '#ff6b6b', '#ffcc00', '#834d9b'];
-            const colorIndex = userName.length % colors.length;
-            userAvatar.style.background = `linear-gradient(135deg, ${colors[colorIndex]}, ${colors[(colorIndex + 2) % colors.length]})`;
-        }
+                <h3>Upcoming Scheduled Classes</h3>
+                <div id="myMeetingsList" style="margin-top: 20px;">
+                </div>
+            </div>
 
-        function logout() {
-            sessionStorage.clear();
-            window.location.href = 'login.html';
-        }
+            <div id="video-area"
+                style="display: none; height: 700px; border-radius: 20px; overflow: hidden; box-shadow: var(--shadow-xl);">
+            </div>
+        </section>
+    </main>
 
-        // Essential block functions
-        function organizeClass() {
-            alert('Opening Class Organizer... This feature allows you to schedule and manage classes.');
-            // window.location.href = 'organize-class.html';
-        }
-
-        function createDocument() {
-            alert('Opening Document Creator... Create lesson plans, worksheets, and study materials.');
-            // window.open('document-creator.html', '_blank');
-        }
-
-        function uploadDocument() {
-            alert('Opening Document Upload... Upload PDFs, presentations, videos, and other resources.');
-            // window.location.href = 'upload-document.html';
-        }
-
-        function openWhiteboard() {
-            alert('Launching Interactive Whiteboard... Perfect for visual explanations and collaborative teaching.');
-            // window.open('whiteboard.html', '_blank');
-        }
-
-        function startLiveClass() {
-            alert('Starting Live Class... Video, audio, and screen sharing will begin shortly.');
-            // window.location.href = 'live-class.html';
-        }
-
-        // Initialize page
-        document.addEventListener('DOMContentLoaded', function () {
-            loadUserInfo();
-
-            // Add hover effects
-            document.querySelectorAll('.action-card').forEach(card => {
-                card.addEventListener('mouseenter', function () {
-                    this.style.transform = 'translateY(-10px)';
-                });
-
-                card.addEventListener('mouseleave', function () {
-                    this.style.transform = 'translateY(0)';
-                });
-            });
-
-            // Add click animations to buttons
-            document.querySelectorAll('.action-btn').forEach(btn => {
-                btn.addEventListener('click', function () {
-                    this.style.transform = 'scale(0.95)';
-                    setTimeout(() => {
-                        this.style.transform = '';
-                    }, 150);
-                });
-            });
-        });
-    </script>
+    <script src="tutor.js"></script>
 </body>
 
 </html>
